# PredictionWearApp

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: fc1d48576d6c_init.py
src/PredictionWearApp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/app/: main.py
src/app/domain/services/: forecast_service.py
src/app/infrastructure/db/: __init__.py  models.py  session.py
src/app/infrastructure/db/repositories/: measurement_repo.py  part_repo.py  template_parameter_repo.py  template_repo.py
src/app/ui/dialogs/: measurement_dialog.py  parameter_dialog.py  part_dialog.py  template_dialog.py
src/app/ui/widgets/: forecast_plot_widget.py
src/app/ui/windows/: part_window.py  start_window.py  template_parameters_window.py  templates_window.py
tests/: test_db_schema_smoke.py  test_smoke.py
