[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PredictionWearApp"
version = "0.1.0"
description = "Desktop app for turbine blade wear forecasting"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "xxdime" }
]
dependencies = [
  "PySide6>=6.7.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.2.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.3.0",
  "black>=24.0.0",
  "mypy>=1.8.0",
  "types-setuptools",
  "pytest-qt>=4.4.0",
]

[project.scripts]
turbine-forecast = "app.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
